<resources>
    <string name="app_name" translatable="false">My Store App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--    LOGIN -->
    <string name="buat_akun">Belum memiliki akun</string>
    <string name="masuk_guest">Masuk sebagai pengunjung</string>

    <!--    PENDAFTARTAN TOKO-->
    <string name="field_username">Nama pengguna</string>
    <string name="field_password">Kata sandi</string>
    <string name="field_verif_password">Verifikasi kata sandi</string>
    <string name="field_nama">Nama</string>
    <string name="field_email">Email</string>
    <string name="field_hp">No telepon</string>
    <string name="field_jeniskelamin">Jenis kelamin</string>
    <string name="option_lakilaki">Laki-laki</string>
    <string name="option_perempuan">Perempuan</string>
    <string name="field_tempat_lahir">Tempat lahir</string>
    <string name="field_tanggal_lahir">Tanggal lahir</string>
    <string name="field_alamat">Alamat</string>
    <string name="field_alamat_toko">Alamat toko</string>
    <string name="field_NIK">NIK</string>
    <string name="field_foto_diri">Foto diri</string>
    <string name="field_foto_KTP">Foto KTP</string>
    <string name="field_foto_toko">Foto toko</string>
    <string name="text_daftar">Daftar</string>
    <string name="data_diri">Data Pribadi</string>
    <string name="data_akun">Data Akun</string>
    <string name="judul_toko">Daftar Toko</string>
    <string name="header_toko">TOKO</string>
    <string name="cari_toko">Cari toko ...</string>


    <!-- Tambah Produk -->
    <string name="nama_produk">Nama</string>
    <string name="merk_produk">Merk</string>
    <string name="harga_produk">Harga</string>
    <string name="jumlah_produk">Jumlah</string>
    <string name="simpan_produk">Simpan</string>

    <!--    MENU UTAMA -->
    <string name="produk">Produk</string>
    <string name="dompet">Dompet</string>
    <string name="asset">Total Uang pada Aset</string>
    <string name="pemasukkan">Pemasukkan</string>
    <string name="pengeluaran">Pengeluaran</string>
    <string name="total_dompet">DALAM DOMPET</string>
    <string name="aktifitas_terakhir_produk">Aktivitas terakhir produk</string>
    <string name="aktifitas_terakhir_dompet">Aktivitas terakhir dompet</string>

    <!--    Produk -->
    <string name="tambah_produk">+ PRODUK</string>
    <string name="kurang_produk">- PRODUK</string>
    <string name="judul_produk">PRODUK SAYA</string>
    <string name="cari_produk">cari produk ...</string>
    <string name="aktifitas_produk">Aktifitas produk</string>
    <string name="button_tambah">Tambah</string>

<!--    AKTIVITAS PRODUK-->
    <string name="penjualan">Penjualan</string>
    <string name="pengambilan">Pengambilan</string>
    <string name="tambah_stok">Penambahan Stok</string>

    <!--    DOMPET  -->
    <string name="dompet_saya">DOMPET SAYA</string>
    <string name="dalam_kasir">DALAM KASIR</string>
    <string name="asset_dalam_produk">Asset dalam produk</string>
    <string name="aktifitas">Aktifitas</string>
    <string name="uang_masuk">Uang masuk</string>
    <string name="uang_keluar">Uang keluar</string>
    <string name="aktifitas_dompet">Aktifitas dompet</string>

    <string name="nominal">Nominal</string>
    <string name="keteragan">Keterangan</string>

<!--    PUT PRODUK-->
    <string name="button_cari">Cari</string>
    <string name="produk_nama">Nama Produk</string>
    <string name="button_diambil">Diambil</string>
    <string name="button_terjual">Terjual</string>

<!--    PROFILE-->
    <string name="profil">Profil</string>
    <string name="setting">Pengaturan</string>
    <string name="about">Tentang</string>
    <string name="help">Bantuan</string>
    <string name="report_error">Laporkan error</string>
    <string name="logout">Keluar</string>
    <string name="hapus_akun">Hapus akun</string>
    <string name="edit">Edit</string>
    
<!--    EDIT PROFILE -->
    <string name="edit_profile">Edit profile</string>
    <string name="kata_sandi_baru">Kata sandi baru</string>
    <string name="kata_ver_sandi_baru">Verifikasi kata sandi baru</string>
    <string name="kata_sandi_lama">Kata sandi lama</string>
    
<!--    HAPUS AKUN -->
    <string name="perhaikan">Perhatikan!</string>
    <string name="info_hapus">Setelah akun dihapus, pemilik akun tidak dapat lagi mengakses akun secara permanen. Tolong jangan sembarangan menghapus akun</string>


<!--    KASIR-->
    <string name="kosong_kasir">Kosongkan Kasir</string>
    <string name="perbarui_kasir">Perbarui Kasir</string>
    <string name="note">Catatan:</string>
    <string name="note_1">1. Tekan ‘Kosongkan Kasir’ untuk mengubah data dalam kasir menjadi 0</string>
    <string name="note_2">2. Tekan ‘Perbarui Kasir’ untuk memperbarui data dalam kasir sesuai dengan kolom nomial</string>
    <string name="note_3">3. Kolom nominal harus diisi ketika akan menekan tombol ‘Perbarui Kasir’</string>

<!--    DETAIL AKTIVITAS-->
    <string name="detail_aktivitas">Detail aktivitas</string>
    <string name="tanggal">Tanggal</string>
    <string name="waktu">Waktu</string>
    <string name="kembali">Kembali</string>
    
<!--    PEMBARUAN KASIR -->
    <string name="perubahan_kasir">Perubahan Data Kasir</string>
    <string name="yakin_perbarui">Apakah anda yakin ingin memperbarui data uang pada kasir menjadi <b>%1$s</b> ?</string>
    <string name="yakin_hapus">Apakah anda yakin ingin mengosongkan data uang pada kasir menjadi Rp 0,-?</string>

<!--    OPTION -->
    <string name="penyetokan">Penyetokan</string>
    <string name="produk_baru">Produk baru</string>
    <string name="pembukuan_tahunan">Pembukuan tahunan</string>
    <string name="pembukuan_tahunan_1">Pembukuan tahunan pemeriksaan ganda</string>

<!--    PEMBUKUAN -->
    <string name="pembukuan_message">Apakah anda yakin ingin melakukan pembukuan tahunan?
        \n\nPembukuan tahunan akan menghapus seluruh data riwayat aktivitas produk dan dompet selama satu tahun ke belakang
        \n\nRangkuman selama satu tahun dapat disimpan dalam bentuk text
    </string>
    <string name="pilih_simpan_text">Pilih aplikasi simpan data</string>
    <string name="pembukuan_message_2">Tekan \'Ya\' untuk melakukan pembukuan!
        \n\nSetelah menekan \'Ya\' seluruh data aktivitas akan hilang
    </string>
    <string name="keranjang">Keranjang</string>
    <string name="daftar_produk">Daftar produk</string>

<!--    USER-->
    <string name="kunjungi">Kunjungi</string>

<!--    KERANJANG-->
    <string name="judul_keranjang">KERANJANG SAYA</string>
    <string name="button_simpan_keranjang">Simpan Keranjang</string>
    <string name="button_hapus">Hapus</string>
    <string name="simpan_keranjang">Simpan Keranjang</string>
    <string name="keranjang_message">Apakah anda yakin ingin menyimpan keranjang?
        \n\nData Keranjang dapat disimpan dalam bentuk text
    </string>
    <string name="tidak_bisa_put">Mohon masukkan setidaknya 1 produk</string>
    <string name="about_1">Aplikasi ini dibuat karena seringkali adanya kesalahan pengolahan data dari pemilik toko sembako sehingga menyebabkan ketidakakuratan dalam pencatatan data sehingga dapat merugikan toko. Mengolah data secara manual membuat pekerjaan selesai lebih lambat karena penyelesaian pekerjaan bergantung pada kehadiran manusia yang mengerjakan pekerjaan tersebut. Dengan adanya teknologi, proses olah data dapat selesai dengan lebih cepat dan tepat. Sehingga kami berinisiatif memberikan solusi yaitu berupa aplikasi yang memiliki fungsi untuk mengelola masalah tersebut.</string>
    <string name="tujuan">Tujuan</string>
    <string name="about_2">Mempermudah pemilik dalam pengolahan data toko yang terdiri dari data toko tersebut, data produk, data dompet (uang yang ada di toko).</string>
    <string name="pengembang">Pengembang</string>
    <string name="help_1">Silahkan hubungi pengembang untuk meminta bantuan</string>
    <string name="report_error_1">Laporkan permasalah yang anda alami</string>
    <string name="report_error_2">Laporkan permasalahan</string>
    <string name="tidak_boleh_kosong">Field tidak boleh kosong</string>
    <string name="behasil_mengirim">Berhasil mengirim</string>
    <string name="logout_confirm">Apakah anda yakin untuk keluar?</string>
    <string name="tidak">Tidak</string>
    <string name="ya">Ya</string>
    <string name="pendaftaran_toko">PENDAFTARAN TOKO</string>
    <string name="sukses">Sukses</string>
    <string name="produk_tidak_ada">Produk tidak ditemukan !</string>
    <string name="tidak_boleh_lebih">Jumlah tidak boleh melebihi stok !</string>
    <string name="hapus_data">Hapus data</string>
    <string name="yakin_hapus_produk">Apakah anda yakin untuk menghapus data ini?</string>
    <string name="ya_simpan">Ya, simpan</string>
    <string name="field_verif_password_salah">Please enter the old password correctly</string>
    <string name="yakin_keluar">Apakah anda yakin menutup aplikasi?</string>
    <string name="keluar">Keluar</string>
    <string name="login">Masuk</string>
    <string name="data_tidak_ditemukan">Tidak ditemukan</string>
</resources>