<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:id="@+id/background">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/radius_input"

        android:paddingVertical="3dp"
        android:paddingHorizontal="3dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/hapus_akun"
            android:fontFamily="@font/poppins_bold"
            android:textSize="9dp"
            android:textColor="@color/merah_muda"

            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/perhaikan"
            android:fontFamily="@font/poppins_light"
            android:textColor="@color/black"
            android:textSize="9dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/info_hapus"
            android:fontFamily="@font/poppins_light"
            android:textColor="@color/black"
            android:textSize="9dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/field_password"
            android:fontFamily="@font/poppins_bold"
            android:textColor="@color/black"
            android:textSize="9dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp"
            >

            <EditText
                android:id="@+id/password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="5"

                android:inputType="textPassword"
                android:textSize="9dp"/>

            <Button
                android:id="@+id/button_hapus"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_weight="1"
                android:background="@drawable/radius_button_merah_muda"

                android:text="@string/hapus_akun"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="9dp"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>